# Redis-Cache

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  bench_store.cpp
config/: server.conf
dashboard/: index.html  nginx.conf  package.json  vite.config.ts
dashboard/src/: App.tsx
dashboard/src/api/: metrics.ts
docs/: architecture.md  design_tradeoffs.md
scripts/: benchmark.sh  load_test.sh
src/: main.cpp
src/commands/: Command.hpp  Dispatcher.cpp  Dispatcher.hpp
src/commands/handlers/: DelCmd.hpp  ExistsCmd.hpp  ExpireCmd.hpp  GetCmd.hpp  IncrCmd.hpp  KeysCmd.hpp  PingCmd.hpp  SetCmd.hpp  TtlCmd.hpp
src/concurrency/: ThreadPool.cpp  ThreadPool.hpp
src/metrics/: HttpServer.cpp  HttpServer.hpp  Metrics.cpp  Metrics.hpp
src/network/: Buffer.hpp  Connection.cpp  Connection.hpp  EventLoop.cpp  EventLoop.hpp  TcpListener.cpp  TcpListener.hpp
src/persistence/: Aof.cpp  Aof.hpp  Rdb.cpp  Rdb.hpp
src/protocol/: RespParser.cpp  RespParser.hpp  RespSerializer.cpp  RespSerializer.hpp  RespTypes.hpp
src/server/: Config.cpp  Config.hpp  Server.cpp  Server.hpp
src/storage/: Entry.hpp  LruEviction.cpp  LruEviction.hpp  Store.cpp  Store.hpp
src/util/: Logger.hpp  TimeUtils.hpp
tests/: CMakeLists.txt  test_commands.cpp  test_lru.cpp  test_resp_parser.cpp  test_store.cpp
